# Round1B

./: .replit  Dockerfile  README.md  approach_explanation.md  create_sample_pdf.py  main.py  pyproject.toml  replit.md  requirements_docker.txt  requirements_final.txt  requirements_lite.txt
input/: config.json  sample_research_paper.txt
output/: challenge1b_output.json
src/: pdf_processor.py  section_ranker.py  section_ranker_lite.py  text_analyzer.py  text_analyzer_lite.py  utils.py
