[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "pdfplumber>=0.11.7",
    "psutil>=7.0.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.3",
    "scikit-learn>=1.7.1",
    "spacy>=3.8.7",
]
